skill-backups/episode-generator/v0.1.12/references/canvas-cache-protocol.md
# Canvas 公开层、私有缓存与滚动窗口协议

规定 Canvas 公开文件、Canvas 外私有缓存、滚动窗口和校验回写方法。运行环境须开放 `ls / glob / read_file / write_file / edit_file / grep / exec`。文件工具没有隐藏标记，隔离依靠目录边界完成。

## 一、项目定位

1. 用 `ls` 查看当前 workspace。
2. 用 `glob` 查找 `**/.episode-generator-cache/*/manifest.md`，以缓存目录名作为 slug，并确认对应 `canvas/{slug}/episode-structure.md` 存在或已预留。
3. 唯一候选先核对 manifest 项目标题；内容不匹配时视为无候选。
4. 多个候选依次核对游戏标题 slug、任务关联文件、结构稿标题和 manifest，只保留内容匹配项；最近更新时间只用于匹配项之间的排序。
5. 没有匹配候选时，在当前 workspace 的 `canvas/` 下创建游戏标题 slug 目录和基础文件。
6. 将全部候选、核验结果和最终路径写入 manifest；不询问路径选择。

## 二、目录初始化

使用 `exec` 创建：

```text
{canvas-root}/episodes/
{workspace-root}/.episode-generator-cache/{slug}/episodes/
```

使用 `write_file` 创建不存在的公开逐集文件和缓存文件；已有文件必须先 `read_file`，再使用 `edit_file`。

公开文件：

```text
{canvas-root}/episode-structure.md
{canvas-root}/episode-flowchart.svg
{canvas-root}/episodes/episode-NNN.md
{canvas-root}/episode-script.md
```

缓存文件：

```text
{workspace-root}/.episode-generator-cache/{slug}/manifest.md
{workspace-root}/.episode-generator-cache/{slug}/input.md
{workspace-root}/.episode-generator-cache/{slug}/global.md
{workspace-root}/.episode-generator-cache/{slug}/branch-audit.md
{workspace-root}/.episode-generator-cache/{slug}/topology.md
{workspace-root}/.episode-generator-cache/{slug}/characters.md
{workspace-root}/.episode-generator-cache/{slug}/props.md
{workspace-root}/.episode-generator-cache/{slug}/hooks.md
{workspace-root}/.episode-generator-cache/{slug}/validation.md
{workspace-root}/.episode-generator-cache/{slug}/episodes/episode-NNN.md
```

Canvas 项目中只允许保留 `episode-flowchart.svg`、`episode-structure.md`、`episode-script.md` 和 `episodes/`。不得在 Canvas 内创建缓存目录、审计文件、生产卡、运行日志或 HTML 首页。

## 三、缓存格式

### input.md

四项输入通过门禁后才创建项目缓存，并按以下顺序原样保存：

```text
# 正式输入
## 游戏企划
实际描述
## 角色描述
实际描述
## 场景描述
实际描述
## 道具描述
实际描述
```

二级标题必须且只能是以上四项；每项必须含实际描述，不能只有名称或标识。交给故事版的九个输出字段不得写入本文件。

### manifest.md

固定栏目：

```text
# 项目清单

## 项目
## 公开 Canvas
## 缓存版本
## 当前阶段
## 节点总数
## 执行组计划
## 当前执行组
## 已完成分集
## 对白校验状态
## 因果连续性校验状态
## 最近更新
```

缓存版本使用 `episode-cache-v0.1.12`。

### global.md

固定栏目：

```text
# 全局事实

## 故事前提
## 事实基线
## 世界规则与代价
## 主干情绪脊
## 结局条件
## 场景固定连接
## 全局未解决冲突
```

### topology.md

每个节点使用以下固定格式，流程图从此文件生成，不从梗概重新推断：

```text
## episode-001｜标题
- 前置节点：无
- 后续节点：episode-002, episode-003
- 互动类型：调剂选择
- 选择：动作文字 -> episode-002
- 选择：动作文字 -> episode-003
- 结局：否
```

无前置或无后续统一写`无`；节点编号固定为三位数字。

### branch-audit.md

拓扑冻结前记录候选生成与遗漏审计，不进入公开层：

```text
# 分支遗漏审计

## 目标轴
- 关系目标：
- 核心任务目标：
- 当前情绪：
- 题材权重：

## 候选岔点
### fork-001｜来源事件
- 玩家：
- 互斥行动：动作A；动作B
- 认同开关：负面剥离/正面认领/无
- 目标冲突：
- 即时状态差：
- VAD方向差：
- 代价：
- 处理：保留/删除
- 落图节点：episode-002/无
- 理由：

## 前五分钟交互
- 落图节点：episode-002
- 教学：
- 情绪代入：
- 戏剧功能：
- 不同即时结果：

## 审计结论
PASS
```

每个保留候选必须指向最终拓扑中的选择节点；删除候选必须记录事实不可执行、没有即时状态差或互动预算价值不足等具体理由。不得以“主干已经这样写”“不符合预定剧情”作为删除理由。

### characters.md

先记录静态事实，再按路径记录动态状态：

```text
## 人物名
### 静态事实
### 当前路径状态
- 当前节点：
- 当前目标：
- 已知信息：
- 当前误解：
- 隐瞒信息：
- 关系状态：
- 当前情感得失：
- 未解决心结：
- 权力与筹码：
- 已付代价：
- 弧光阶段：
```

### props.md

每件关键物件记录：

```text
## 物件名
- 初始来源：
- 当前持有人：
- 当前地点：
- 当前状态：
- 知道其作用的人：
- 最近出现节点：
- 待回收节点：
```

### hooks.md

每个钩子记录抛出节点、具体问题、当前已知、部分回答节点、最终回收节点和当前状态。

### episode-NNN.md

固定栏目：

```text
# 第N集《标题》

## 生产卡
## 单集梗概
## 本集冲突与前后承接
## 前置节点
## 后续节点
## 当前集初稿
## 当前集定稿
## 度量记录
## 因果复核记录
## 对白复核记录
## 真实结尾状态
## 关联角色
## 关联场景
## 关联道具
## 校验状态
```

三个资产栏目必须使用逐项 Markdown 列表，值只能是上游 `角色名称`、`场景名称`、`道具名称` 的原文。资产状态写入人物、物件或真实结尾缓存，不得混入资产名称。

### 故事版字段映射

以下是 `episode-generator` 输出字段与故事版/分镜输入字段的一一映射，不是 `episode-generator` 的输入，也不是内部缓存栏目要求。每一集直接传递以下九个一级字段；多集重复传递同一字段组，不创建 JSON、交接文件、路径或额外的 `分集列表` 字段：

```text
分集编号
分集标题
分集剧本
  单集梗概
  完整剧本
剧本分析
  本集冲突
  前置节点编号列表
  后续节点编号列表
关联角色
关联场景
关联道具
是否结局
互动节点
  是否为分支节点
  是否有选择问题
  选择问题
  选项列表
    选项编号
    选项文字
    目标分集编号
  默认下一分集编号
```

不允许新增、删除、改名、换序或自定义嵌套字段。脚本只在内存中验证候选字段；正文、拓扑或资产字段变化后，旧校验立即失效，受影响分集复核重新通过后才能直接向故事版传参。

两轮复核记录固定使用以下格式。`正文 SHA-256` 必须是当前候选定稿去除首尾空白后的 SHA-256；每个 PASS 后必须有针对本集的具体依据，不能只写 PASS 或套用通用句。

```text
## 因果复核记录
- 状态：PASS/FAIL/PENDING
- 正文 SHA-256：64位十六进制/PENDING
- 上游事实：PASS｜具体依据
- 地点与权限：PASS｜具体依据
- 事件与反应链：PASS｜具体依据
- 物件与状态：PASS｜具体依据
- 后续进入条件：PASS｜具体依据
- 未解决问题：无/具体问题

## 对白复核记录
- 状态：PASS/FAIL/PENDING
- 正文 SHA-256：64位十六进制/PENDING
- 话茬与当下目的：PASS｜具体依据
- 人物声音：PASS｜具体依据
- 设定发布与承重句：PASS｜具体依据
- 朴素中文：PASS｜具体依据
- 未解决问题：无/具体问题
```

生产卡在核心关系或个人创伤会被触发时，写明相关人物当前最怕失去或最想挽回的对象、尚未解决的关系心结，以及核心事件对他的意义。普通过场不强制填写情感升级。

## 四、执行组与滚动窗口

### 执行组划分

- `线性组`：连续默认推进节点放在同组，在互动、重大反转、汇合或结局前停止。
- `互动组`：互动节点与全部直接即时结果节点放在同组；结果节点后续过长时，可在即时结果完成后的稳定边界另起执行组。
- `汇合组`：汇合节点读取所有直接前置真实结尾和状态差异，并与汇合后的短连续段组成同组。
- `结局组`：最终选择节点与它直接打开的全部结局放在同组，进行结局间对照校验。

执行组计划写入 manifest，记录组编号、节点、入口、出口、类型、容量估算和校验状态。

### 容量控制

每组开始前估算当前模型上下文，给输入缓存、剧本正文、双校验和自动修复分别保留空间。不得把上下文全部用于正文。

超出稳定容量时，只在以下边界拆分：

- 一个局部问题已经回答、下一个困局尚未开始；
- 分支即时结果已经完成；
- 汇合节点及来路差异已经承接；
- 明确时间段或场景段落结束。

不得拆开选择与即时结果、铺垫与反转、汇合与来路、最终选择与结局。

### 普通线性组

读取：

- `global.md` 压缩事实，不读取主干情绪脊、PAD/VAD 数值和力度谱；
- 当前集生产卡；
- 直接前置集真实结尾；
- 直接后续集进入条件；
- 当前人物、物件和钩子状态；
- 核心场面相关人物的当前情感得失、关系状态和未解决心结；
- 必要时前一集梗概。

### 互动组

同时读取互动节点、全部直接结果生产卡、原始选项动作和选择瞬间状态。组内交叉检查各选项是否被演出、即时结果是否不同、关系/信息/风险差异是否成立，以及分支的篇幅和戏剧结果力度是否明显失衡。

### 汇合组

读取所有直接前置集的真实结尾和各路线必须保留的差异，不以编号最近的一集代替其它来路。

### 结局组

读取开放各结局的关键选择、证据、人物关系、资源和代价状态，并对照检查结果、代价、价值判断和情绪落点是否真正不同。

## 五、逐集回写

每集通过校验后：

1. 将定稿和真实结尾写入当前分集文件。
2. 更新 `characters.md` 中受影响人物的路径状态。
3. 更新 `props.md` 中受影响物件的持有、位置和状态。
4. 更新 `hooks.md` 中新抛出、部分回答或已回收的钩子。
5. 更新直接后续集生产卡中的前置真实结尾。
6. 更新 `validation.md` 和 `manifest.md`。
7. 冻结当前集，再继续下一节点。

`当前集初稿`和`当前集定稿`必须包含实际剧本文本，不得写“已完成”“见公开稿”“与公开稿一致”等替代语。`度量记录`固定记录公开可见字符数、动作段数、门槛和判定；机械门禁、中文对白与因果连续性三项均通过后才允许冻结。复核记录的正文指纹与当前候选不一致时自动失效，必须重新执行两轮复核。

## 六、确定性校验

使用 `exec` 运行 `python3 {skill-root}/scripts/validate_episode_cache.py {canvas-root}`，其中`{skill-root}`为当前 `SKILL.md` 所在目录；最终投射后追加 `--require-public`。脚本检查：

- 节点编号唯一；
- 所有目标节点存在；
- 第一集是唯一入口；
- 所有节点可达；
- 结局无出边；
- 非结局有默认推进或选择；
- 分集缓存文件数量与节点数一致；
- Canvas 完整稿节点数与拓扑一致。
- 每集可见字符数和动作段数达到 manifest 中记录的项目门槛；未记录时使用 850—1300 个去空白字符、16—24 个动作段。
- 私有缓存保存真实初稿、真实定稿和度量记录，不接受事后引用公开稿的占位文字。
- v0.1.12 每集因果与对白复核记录栏目完整、具体依据非空、未解决问题为“无”，且两项正文 SHA-256 均等于当前定稿与公开逐集文件的 SHA-256。
- `度量记录`中的数字和判定必须与当前定稿重新计算结果一致；定稿脚本不得硬编码 PASS。

关键物件来源、钩子回收、中文对白和叙事连续性继续执行语义检查，不由确定性脚本替代。

## 七、公开层更新

`episode-structure.md` 由冻结的 `topology.md` 和生产卡投射生成，并在后续完整剧本阶段持续保留。

`episode-structure.md` 开头先写 `![分集流程图](./episode-flowchart.svg)`；随后将 Mermaid 源码放入 `<details>` 折叠区，供继续编辑。运行 `python3 {skill-root}/scripts/render_episode_flowchart.py {canvas-root} --title "《游戏标题》分集流程图"`，从同一 `topology.md` 生成静态 SVG。不得复制 Mermaid 源码充当视觉图，也不得依赖宿主页面运行 Mermaid JavaScript。

每个私有分集缓存通过校验并冻结后，投射为公开的 `episodes/episode-NNN.md`。公开逐集文件只包含标题、梗概、完整剧本、玩家选择和结局正文，不包含生产卡、校验或下游参数。

`episode-script.md` 由全部公开逐集文件按编号组装。组装阶段不重新生成全文，也不反向覆盖公开逐集文件。

将真实完整初稿直接写入私有分集的 `当前集初稿`，再使用 `python3 {skill-root}/scripts/finalize_episode_artifacts.py {canvas-root} --mode record-draft [--episodes episode-001,...]` 核验初稿并把定稿与两轮复核状态重置为 PENDING。主 Agent 把修订候选写入 `当前集定稿`，完成因果复核与对白复核后，将两项带当前定稿 SHA-256 的具体记录写入缓存，再使用 `--mode finalize` 冻结、投射公开逐集文件并组装汇总稿。

`finalize` 必须重新计算机械门禁并核对两轮复核记录；任何一项缺失、FAIL、PENDING、依据为空、遗留问题非“无”或正文 SHA-256 不一致时立即失败，不写定稿、不写语义 PASS、不组装汇总稿。该脚本只执行门禁与机械投射，不生成、摘要或改写剧情内容。

公开交付只使用 `episode-flowchart.svg`、`episode-structure.md`、`episodes/episode-NNN.md` 和 `episode-script.md`。不生成或维护 `index.html`，避免平台画布与本地 HTML 形成两套展示源。

## 八、单集修改与依赖传播

收到单集修改请求时，以公开逐集文件为编辑入口，不从汇总稿中提取。

1. 读取公开逐集文件、对应私有缓存、所有直接前置真实结尾和直接后续进入条件。
2. 修改公开候选后，把同一正文写入私有缓存的 `当前集定稿`，旧复核指纹立即失效；随后运行中文对白和连续性双校验。
3. 若真实结尾与缓存边界未变，双校验通过后使用 `finalize --episodes episode-NNN` 从缓存定稿投射该集公开文件并更新汇总稿。
4. 若人物关系、已知信息、物件状态、钩子、选择或结局条件变化，使用 `grep` 和拓扑找出引用该状态的节点，解冻受影响节点及其直接后续。
5. 重新校验受影响范围后，更新对应公开逐集文件和汇总稿。
6. 未受影响的公开逐集文件保持冻结，不重新生成；修改后的正文指纹变化会使旧复核记录失效，必须重跑两轮再 finalize。

## 九、恢复

新会话或中断后：

1. 定位并重新核验 Canvas。
2. 读取 `manifest.md`，再核对缓存文件、公开文件和拓扑中的实际状态。
3. manifest 与文件状态不一致时，以通过格式和完整性校验的实际文件为准，并修正 manifest。
4. 运行 `python3 {skill-root}/scripts/validate_episode_cache.py {canvas-root}`；确定性校验失败时先修复缓存，不继续写作。
5. 文件证据仍不足以唯一判断可信状态时，使用 `ask_user` 请求最小必要信息，不猜测或覆盖已冻结正文。
6. 读取对应全局缓存和未完成节点，从第一个未冻结节点继续。
7. 不重做已冻结节点，除非其文件不完整、校验状态无效或全剧校验确定其在受影响范围内。
